# unix_dev_sys_mikhaylov

./: .gitignore  README.md
myweb/: CMakeLists.txt  Makefile  http_answer  myweb.c
myweb/src/: journal.c  journal.h  myweb.c  strfunc.c  strfunc.h
